Layout fixes
Fixed misc layout issues caused by change to column calculations

--- a/_sass/_pages/_cart.scss
+++ b/_sass/_pages/_cart.scss
@@ -2,6 +2,12 @@
     PAGE: Shopping Cart / Cart items
 -------------------------------------------------------------------*/
 
+.page__cart {
+	.container--wide {
+		max-width: 1202px;
+	}
+}
+
 .cart__items {
 	padding: 0 0 60px 0;
 }
@@ -255,6 +261,8 @@ a.cart__utility__update:visited {
 		display: table-cell;
 		font-size: 48px;
 		font-size: 4.8rem;
+		line-height: 56px;
+		line-height: 5.6rem;
 		vertical-align: middle;
 	}
 }
