--- a/_sass/_pages/_product.scss
+++ b/_sass/_pages/_product.scss
@@ -179,7 +179,8 @@ $product-details-context: 620px;
 	@extend .product-grid;
 
 	ul > li {
-		margin: 30px 0;
+		margin-top: 30px;
+		margin-bottom: 30px;
 	}
 
 }
