--- a/_sass/_ui/_forms.scss
+++ b/_sass/_ui/_forms.scss
@@ -6,6 +6,12 @@
 	@extend .cf;
 	margin: 0 0 30px 0;
 
+	.col-1-2 {
+		$margin: (15px / 713px * 100%);
+		margin: 0 $margin 0 0;
+		width: (100% - $margin) / 2;
+	}
+
 	div:not(.col-1-2) {
 		margin: 15px 0 0 0;
 	}
